# kiro

./: CMakeLists.txt  INSTALL  Makefile  README.md  kiro-client.c  kiro-client.h  kiro-rdma.h  kiro-server.c  kiro-server.h  kiro-trb.c  kiro-trb.h  test-client.c  test-server.c  test.c
src/: CMakeLists.txt  kiro-client.c  kiro-client.h  kiro-enums.c.template  kiro-enums.h.template  kiro-messenger.c  kiro-messenger.h  kiro-rdma.h  kiro-sb.c  kiro-sb.h  kiro-server.c  kiro-server.h  kiro-trb.c  kiro-trb.h  kiro.pc.in
test/: CMakeLists.txt  test-client-bandwidth.c  test-client-bandwith.c  test-client-gpudirect.cu  test-client-latency.c  test-client.c  test-messenger-bandwidth.c  test-messenger.c  test-partial.c  test-proxy-client.c  test-proxy-gpudirect.cu  test-proxy-host.cu  test-proxy-server.c  test-server-gpudirect.c  test-server.c  test.c
test/kernels/: identity.cu  twice.cu
